<resources>
    <string name="app_name">Travelers</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="create_travel">Create Travel</string>
    <string name="logout">Log Out</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Log In</string>
    <string name="sign_up">Sing Up</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="prompt_email">e-Mail</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="phone">Phone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="google_maps_api_key">AIzaSyBPuvsRjj448tNsyXLv5kTzdAcBJ0jqX7E</string>
    <string name="save_changes">Save Changes</string>
</resources>
