<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SetUpActivity"
    android:id="@+id/id_account">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/navigation_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
        android:id="@+id/sing_up_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher_round"/>
        <Button
        android:id="@+id/sing_up_add_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/add_image"/>

        </LinearLayout>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        android:labelFor="@+id/set_up_edit_name"/>
        <EditText
        android:id="@+id/set_up_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/surname"
        android:labelFor="@+id/set_up_edit_surname"/>
        <EditText
        android:id="@+id/set_up_edit_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:labelFor="@+id/set_up_edit_user_name"/>
        <EditText
        android:id="@+id/set_up_edit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/phone"
        android:labelFor="@+id/set_up_edit_phone"/>
        <EditText
        android:id="@+id/set_up_edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="TextFields" />

        <Button
            android:id="@+id/set_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"/>
    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/side_nav_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/side_menu"
        android:layout_gravity="start"/>
</android.support.v4.widget.DrawerLayout>
