<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".Activities.SignUpActivity"
    android:layout_margin="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/prompt_email"
                android:labelFor="@+id/sign_up_edit_mail"/>

            <EditText
                android:id="@+id/sign_up_edit_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/password"
                android:labelFor="@+id/sign_up_edit_password"/>
            <EditText
                android:id="@+id/sign_up_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/repeat_password"
                android:labelFor="@+id/sign_up_edit_repeat_password"/>
            <EditText
                android:id="@+id/sign_up_edit_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"/>

            <Button
                android:id="@+id/sign_up_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alredy have an account?"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>